# bazel-config-multiple-hashes

./: .bazelrc  .gitignore  BUILD.bazel  README.md  defs.bzl  repro.sh
